--- a/css/layout.css
+++ b/css/layout.css
@@ -94,7 +94,7 @@
 /* Play area in center, above the hand */
 .play-area {
   position: fixed;
-  top: 40%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10;
